--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -453,7 +453,7 @@
       <div class="message">
         <div class="py-1 pb-3 mr-1 float-xs-left">
           <div class="avatar">
-            <img src="/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+            <img src="packages/master_layout/src/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
             <span class="avatar-status tag-success"></span>
           </div>
         </div>
