--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -267,31 +267,31 @@
     <ul class="nav">
 
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['Dashboard']"><i class="icon-home"></i> Главная </a>
+        <a class="nav-link" [cmRouterLink]="['Dashboard']"><i class="icon-home"></i> Главная </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['ContractList']"><i class="icon-docs"></i> Договоры </a>
+        <a class="nav-link" [cmRouterLink]="['ContractList']"><i class="icon-docs"></i> Договоры </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['RequestList']"><i class="icon-note"></i> Заявки </a>
+        <a class="nav-link" [cmRouterLink]="['RequestList']"><i class="icon-note"></i> Заявки </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['ObjectBudgetList']"><i class="icon-calculator"></i> Бюджеты </a>
+        <a class="nav-link" [cmRouterLink]="['ObjectBudgetList']"><i class="icon-calculator"></i> Бюджеты </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['ContractorList']"><i class="icon-people"></i> Подрядчики </a>
+        <a class="nav-link" [cmRouterLink]="['ContractorList']"><i class="icon-people"></i> Подрядчики </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['ObjectList']"><i class="icon-grid"></i> Объекты </a>
+        <a class="nav-link" [cmRouterLink]="['ObjectList']"><i class="icon-grid"></i> Объекты </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['Analytics']"><i class="icon-pie-chart"></i> Аналитика </a>
+        <a class="nav-link" [cmRouterLink]="['Analytics']"><i class="icon-pie-chart"></i> Аналитика </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"><i class="icon-graph"></i> Курсы валют </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['PaymentBudgetList']"><i class="icon-wallet"></i> Платежный бюджет </a>
+        <a class="nav-link" [cmRouterLink]="['PaymentBudgetList']"><i class="icon-wallet"></i> Платежный бюджет </a>
       </li>
 
       <li class="divider"></li>
