fixed top padding, added class for preloader

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="navbar-fixed sidebar-nav fixed-nav">
 	<master-layout>
-		<div style="position: fixed; top: 50%; left: 50%; margin-top: -100px">
+		<div class="cm-preloader-cube">
 			<div class="sk-folding-cube">
 				<div class="sk-cube1 sk-cube"></div>
 				<div class="sk-cube2 sk-cube"></div>
