--- a/lib/src/breadcrumb/breadcrumb_component.html
+++ b/lib/src/breadcrumb/breadcrumb_component.html
@@ -1,7 +1,7 @@
-<div id="breadcrumbContent">
+<ol class="breadcrumb" id="breadcrumbContent">
 	<li class="breadcrumb-item active">
 		<!-- <a href="#"> -->
 		Главная
 		<!-- </a> -->
 	</li>
-</div>
+</ol>
