--- a/lib/src/sidebar/sidebar_component.html
+++ b/lib/src/sidebar/sidebar_component.html
@@ -2,9 +2,15 @@
 	
 	<nav class="sidebar-nav">
 		<ul class="nav">
-			
+			<li class="nav-title">
+				Главная
+			</li>
 			<li class="nav-item">
-				<a class="nav-link" [cmRouterLink]="['Dashboard']"><i class="icon-home"></i> Главная </a>
+				<a class="nav-link" [cmRouterLink]="['Dashboard']"><i class="icon-home"></i> Рабочий счтол </a>
+			</li>
+
+			<li class="nav-title">
+				Разделы
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" [cmRouterLink]="['ContractList']"><i class="icon-docs"></i> Договоры </a>
