--- a/lib/src/sidebar/sidebar_component.html
+++ b/lib/src/sidebar/sidebar_component.html
@@ -6,7 +6,7 @@
 				Разделы
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" [cmRouterLink]="['Dashboard']"><i class="icon-home"></i> Рабочий счтол </a>
+				<a class="nav-link" [cmRouterLink]="['Dashboard']"><i class="icon-home"></i> Рабочий стол </a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" [cmRouterLink]="['ContractList']"><i class="icon-docs"></i> Договоры </a>
