changed body font size for small screens

--- a/lib/src/breadcrumb/breadcrumb_component.html
+++ b/lib/src/breadcrumb/breadcrumb_component.html
@@ -1,7 +1,5 @@
 <ol class="breadcrumb" id="breadcrumbContent">
 	<li class="breadcrumb-item active">
-		<!-- <a href="#"> -->
-		Главная
-		<!-- </a> -->
+		Рабочий стол
 	</li>
 </ol>
