--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -267,7 +267,7 @@
 
 <!-- Main content -->
 <main class="main">
-  <div class="container-fluid mt-1" style="">
+  <div class="container-fluid mt-1">
     <ng-content></ng-content>
   </div>
   <!--/.container-fluid -->
