replaced search bar to header

--- a/lib/src/aside/aside_component.html
+++ b/lib/src/aside/aside_component.html
@@ -15,14 +15,14 @@
 	<div class="tab-content">
 		<div class="tab-pane active" id="timeline" role="tabpanel">
 
-			<div class="input-group callout m-0 pt-1 pb-1">
+			<!--<div class="input-group callout m-0 pt-1 pb-1">
 				<input type="text" id="input2-group3" name="input2-group3" class="form-control" placeholder="Поиск" style="float: none">
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-primary"><i class="fa fa-search"></i>
 						<span class="caret"></span>
 					</button>
 				</div>
-			</div>
+			</div>-->
 			<div class="callout m-0 py-h text-muted text-xs-center bg-faded text-uppercase">
 				<small><b>последние события</b>
 				</small>
