--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -251,6 +251,16 @@
       </li>
 
     </ul>
+    <div class="float-xs-right col-md-3">
+      <div class="input-group">
+        <input type="text" id="input2-group3" name="input2-group3" class="form-control" placeholder="Поиск" style="float: none" main-search>
+        <div class="input-group-btn">
+          <button type="button" class="btn btn-primary"><i class="fa fa-search"></i>
+            <span class="caret"></span>
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
   <!--<div style="position: absolute; top: 30px; right: 100px; border: 1px solid #eee; background-color: #fff;">
     <div class="m-0 p-0"><a href="#">Договор №2422 (доп. 1)</a></div>
