--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -9,6 +9,11 @@
     </ul>
 
     <ul class="nav navbar-nav float-xs-right hidden-md-down">
+      <!--<li class="nav-item">
+        <div class="form-group hidden-md-down row">
+          <input type="text" placeholder="Поиск..." class="form-control col-lg-6" id="inputSuccess1" />
+        </div>
+      </li>-->
       <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
            aria-expanded="false">
@@ -249,9 +254,8 @@
       <li class="nav-item">
         <a class="nav-link navbar-toggler aside-toggle" href="#" aside-toggler>☰</a>
       </li>
-
     </ul>
-    <div class="float-xs-right col-md-3">
+    <!--<div class="float-lg-right hidden-md-down col-lg-3">
       <div class="input-group">
         <input type="text" id="input2-group3" name="input2-group3" class="form-control" placeholder="Поиск" style="float: none" main-search>
         <div class="input-group-btn">
@@ -260,7 +264,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
   <!--<div style="position: absolute; top: 30px; right: 100px; border: 1px solid #eee; background-color: #fff;">
     <div class="m-0 p-0"><a href="#">Договор №2422 (доп. 1)</a></div>
