--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -1,6 +1,6 @@
 <header class="navbar">
   <div class="container-fluid">
-    <button class="navbar-toggler mobile-toggler hidden-lg-up" type="button">☰</button>
+    <button class="navbar-toggler mobile-toggler hidden-lg-up" type="button" navbar-toggler>☰</button>
     <a class="navbar-brand" href="#"></a>
     <ul class="nav navbar-nav hidden-md-down">
       <li class="nav-item">
