CMAS-288 Переделать систему маршрутизации на фронтенде

--- a/lib/src/sidebar/sidebar_component.html
+++ b/lib/src/sidebar/sidebar_component.html
@@ -9,7 +9,7 @@
 				<a class="nav-link" [cmRouterLink]="['Dashboard']"><i class="icon-home"></i> Рабочий стол </a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" [cmRouterLink]="['ContractList']"><i class="icon-docs"></i> Договоры </a>
+				<a class="nav-link" [cmRouterLink]="['Contracts']"><i class="icon-docs"></i> Договоры </a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" [cmRouterLink]="['RequestList']"><i class="icon-note"></i> Заявки </a>
