--- a/lib/src/breadcrumb/breadcrumb_component.html
+++ b/lib/src/breadcrumb/breadcrumb_component.html
@@ -1,5 +1,6 @@
 <ol class="breadcrumb" id="breadcrumbContent">
-	<li class="breadcrumb-item active">
-		Рабочий стол
+	<li class="breadcrumb-item" *ngFor="let item of items.values">
+		<a [attr.href]="item.url" [innerHtml]="item.displayName"></a>
 	</li>
+
 </ol>
