--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -1,3 +1,4 @@
+<alert></alert>
 <header class="navbar">
   <div class="container-fluid">
     <button class="navbar-toggler mobile-toggler hidden-lg-up" type="button" navbar-toggler>☰</button>
