--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -5,7 +5,7 @@
     <a class="navbar-brand" href="#"></a>
     <ul class="nav navbar-nav hidden-md-down">
       <li class="nav-item">
-        <a class="nav-link navbar-toggler layout-toggler" href="#" navbar-toggler>☰</a>
+        <span class="nav-link navbar-toggler layout-toggler" href="#" navbar-toggler>☰</span>
       </li>
     </ul>
 
