--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -253,7 +253,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link navbar-toggler aside-toggle" href="#" aside-toggler>☰</a>
+        <span class="nav-link navbar-toggler aside-toggle" aside-toggler>☰</span>
       </li>
     </ul>
     <!--<div class="float-lg-right hidden-md-down col-lg-3">
