--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -5,7 +5,7 @@
     <a class="navbar-brand" href="#"></a>
     <ul class="nav navbar-nav hidden-md-down">
       <li class="nav-item">
-        <span class="nav-link navbar-toggler layout-toggler" navbar-toggler>☰</span>
+        <span class="nav-link navbar-toggler layout-toggler cursor-pointer" navbar-toggler>☰</span>
       </li>
     </ul>
 
@@ -253,7 +253,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <span class="nav-link navbar-toggler aside-toggle" aside-toggler>☰</span>
+        <span class="nav-link navbar-toggler aside-toggle cursor-pointer" aside-toggler>☰</span>
       </li>
     </ul>
     <!--<div class="float-lg-right hidden-md-down col-lg-3">
