fix requests link

--- a/lib/src/sidebar/sidebar_component.html
+++ b/lib/src/sidebar/sidebar_component.html
@@ -12,7 +12,7 @@
 				<a class="nav-link" [cmRouterLink]="['Contracts']"><i class="icon-docs"></i> Договоры </a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" [cmRouterLink]="['RequestList']"><i class="icon-note"></i> Заявки </a>
+				<a class="nav-link" [cmRouterLink]="['Requests']"><i class="icon-note"></i> Заявки </a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" [cmRouterLink]="['ObjectBudgetList']"><i class="icon-calculator"></i> Бюджеты </a>
