logout from top menu

--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -249,7 +249,7 @@
           </div>
 
           <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Профиль</a>
-          <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Выход</a>
+          <a class="dropdown-item" href="javascript:void(0)" (click)="logout()"><i class="fa fa-lock"></i> Выход</a>
         </div>
       </li>
       <li class="nav-item">
