--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -227,7 +227,7 @@
            aria-expanded="false">
           <img src="packages/master_layout/assets/img/avatars/7.jpg" class="img-avatar"
                alt="admin@bootstrapmaster.com">
-          <span class="hidden-md-down">Андрей</span>
+          <span class="hidden-md-down">{{userInfoModel?.name}}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-right">
 
