--- a/lib/src/sidebar/sidebar_component.html
+++ b/lib/src/sidebar/sidebar_component.html
@@ -32,6 +32,9 @@
 			<li class="nav-item">
 				<a class="nav-link" [cmRouterLink]="['PaymentBudgetList']"><i class="icon-wallet"></i> Платежный бюджет </a>
 			</li>
+			<li class="nav-item" *ngIf="isAdmin">
+				<a class="nav-link" [cmRouterLink]="['Administration']"><i class="icon-settings"></i> Администрирование </a>
+			</li>
 			
 			<li class="divider"></li>
 			<li class="nav-title">
