CMAS-407 Скрыть неиспользуемые элементы интерфейса

--- a/lib/src/master_layout_component.html
+++ b/lib/src/master_layout_component.html
@@ -15,7 +15,7 @@
           <input type="text" placeholder="Поиск..." class="form-control col-lg-6" id="inputSuccess1" />
         </div>
       </li>-->
-      <li class="nav-item dropdown">
+<!--      <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
            aria-expanded="false">
           <i class="icon-bell"></i>
@@ -220,7 +220,7 @@
             <strong>Посмотреть все сообщения</strong>
           </a>
         </div>
-      </li>
+      </li>-->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button"
            aria-haspopup="true"
@@ -231,7 +231,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right">
 
-          <div class="dropdown-header text-xs-center">
+      <!--    <div class="dropdown-header text-xs-center">
             <strong>Аккаунт</strong>
           </div>
 
@@ -243,12 +243,12 @@
             class="tag tag-warning">42</span></a>
           <a class="dropdown-item" href="#"><i class="icon-hourglass"></i> Черновики</a>
           <a class="dropdown-item" href="#"><i class="icon-support"></i> Помощь</a>
-
-          <div class="dropdown-header text-xs-center">
+-->
+<!--          <div class="dropdown-header text-xs-center">
             <strong>Настройки</strong>
-          </div>
+          </div>-->
 
-          <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Профиль</a>
+ <!--         <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Профиль</a>-->
           <a class="dropdown-item" href="javascript:void(0)" (click)="logout()"><i class="fa fa-lock"></i> Выход</a>
         </div>
       </li>
